# routes/api.php
@@ -3,9 +3,9 @@
 use App\Http\Controllers\Api\Auth\AuthController;
 use App\Http\Controllers\Api\Auth\NewPasswordController;
 use App\Http\Controllers\Api\CategoryController;
-use App\Http\Controllers\Api\CollectedItemController;
-use App\Http\Controllers\Api\UserCategoryController;
 use App\Http\Controllers\Api\UserController;
+use App\Http\Controllers\Api\RecyclableMaterialController;
+use App\Http\Controllers\Api\UserMaterialController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -31,11 +31,11 @@ Route::delete('category/delete/{id}', [CategoryController::class, 'delete'])->mi
 
 
 //items
-Route::get('items', [CollectedItemController::class, 'GetItems'])->middleware('collector');
-Route::get('items/show/{id}', [CollectedItemController::class, 'show'])->middleware('collector');
-Route::put('items/update/{id}', [CollectedItemController::class, 'update'])->middleware('collector');
-Route::post('items/create/{categoryId}', [CollectedItemController::class, 'create'])->middleware('collector');
-Route::delete('items/delete/{id}', [CollectedItemController::class, 'delete'])->middleware('collector');
+Route::get('materials', [RecyclableMaterialController::class, 'getMaterials'])->middleware('collector');
+Route::get('material/show/{id}', [RecyclableMaterialController::class, 'show'])->middleware('collector');
+Route::put('material/update/{id}', [RecyclableMaterialController::class, 'update'])->middleware('collector');
+Route::post('material/create/{categoryId}', [RecyclableMaterialController::class, 'create'])->middleware('collector');
+Route::delete('material/delete/{id}', [RecyclableMaterialController::class, 'delete'])->middleware('collector');
 
 //user
 Route::get('users', [UserController::class, 'getUsers'])->middleware('admin');
@@ -50,10 +50,10 @@ Route::get('manufactures',[UserController::class, 'manufactures'])->middleware('
 Route::get('collectors',[UserController::class,'collectors'])->middleware('admin');
 Route::put('approve/{id}',[UserController::class,'approve'])->middleware('admin');
 
-//UserCategory
-Route::post('choose/category/{categoryId}', [UserCategoryController::class, 'chooseCategory']);
-Route::put('change/category/{categoryId}', [UserCategoryController::class, 'changeCategory']);
-Route::post('delete/category/{categoryId}', [UserCategoryController::class, 'removeCategory']);
+//UserMaterials
+Route::post('choose/material/{id}', [UserMaterialController::class, 'chooseMaterialToCollect']);
+Route::put('change/material/{id}', [UserMaterialController::class, 'changeMaterialToCollect']);
+Route::post('forget/material/{id}', [UserMaterialController::class, 'removeMaterial']);
 
 //logout
 Route::post('logout', [AuthController::class, 'logout']);
